--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,17 @@ name: Run Selenium Tests
 on:
   push:
     branches: [ "master" ]
-
+#/test
 jobs:
   test:
-      runs-on: macos-latest
-      steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-java@v3
-          with:
-            java-version: '11'
-            cache: maven
-            distribution: 'temurin'
-        - uses: browser-actions/setup-chrome@latest
-        - name: mvn -X verify
-          run: mvn -X verify
-
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          cache: maven
+          distribution: 'temurin'
+      - uses: browser-actions/setup-chrome@latest
+      - name: mvn -X verify
+        run: mvn -X verify
