--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,19 @@
             <version>3.5.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
-
+    <!-- configuration>
+    <excludes>
+    <exclude>com.driver.test.VehicleTest</exclude>
+    </excludes>
+    </configuration-->
 </project>
